--- a/index.html
+++ b/index.html
@@ -67,6 +67,28 @@
         .info-section h3 { font-size: 18px; color: #1f2937; margin-bottom: 10px; margin-top: 25px; }
         .info-section p { font-size: 14px; color: #4b5563; line-height: 1.6; margin-bottom: 10px; word-break: keep-all; }
 
+        .link-group { display: flex; justify-content: center; gap: 20px; margin-top: 40px; flex-wrap: wrap; }
+        .link-item { 
+            width: calc(50% - 10px); /* Adjust for gap */
+            max-width: 250px;
+            display: flex; flex-direction: column; align-items: center; 
+            text-decoration: none; color: #1f2937; 
+            background: #fff; border-radius: 15px; overflow: hidden; 
+            box-shadow: 0 5px 15px rgba(0,0,0,0.05); 
+            transition: transform 0.2s, box-shadow 0.2s; 
+        }
+        .link-item:hover { transform: translateY(-5px); box-shadow: 0 8px 20px rgba(0,0,0,0.1); }
+        .link-thumb { width: 100%; height: 120px; object-fit: cover; }
+        .link-text { padding: 10px 15px; font-size: 14px; text-align: center; font-weight: 600; line-height: 1.4; flex-grow: 1; }
+        .cta-btn-style-2 { 
+            background: var(--primary-pink); color: white; 
+            padding: 8px 15px; border-radius: 0 0 15px 15px; width: 100%; 
+            text-align: center; font-size: 13px; font-weight: bold; 
+        }
+        @media (max-width: 600px) {
+            .link-item { width: 100%; }
+        }
+
         footer { margin-top: 50px; padding: 20px; font-size: 12px; color: #9ca3af; text-align: center; }
         .footer-links { margin-bottom: 15px; }
         .footer-links a { color: #6b7280; text-decoration: none; margin: 0 8px; font-weight: 500; transition: 0.2s; }
@@ -140,6 +162,21 @@
                 <strong>② 불필요한 옷 쇼핑 실패를 줄여</strong> 경제적인 소비를 할 수 있습니다. 
                 이제 무작정 유행을 쫓기보다, 나를 가장 빛나게 해주는 '인생 핏'을 찾아보세요.
             </p>
+        </div>
+
+        <!-- Link Group Section -->
+        <div class="link-group">
+            <a href="https://blog.naver.com/borareview/224158053453" target="_blank" class="link-item">
+                <img src="https://postfiles.pstatic.net/MjAyNjAxMjRfMjI5/MDAxNzY5MjI1ODMyMzA4.ZQqvf1cCPBGxuk8VTBKWH1tT4a4dmyKeAJ_4eNOtivEg.a-Kq5016MPfepc7LWBpKLY_SHRUVv8aO_uOi2Xkt29Eg.JPEG/%EA%B3%A0%EC%9C%A4%EC%A0%95_%EB%A6%BD%EC%8A%A4%ED%8B%B1.jpg?type=w966" class="link-thumb">
+                <span class="link-text">💄 드라마 속 차무희 립스틱 보러가기</span>
+                <div class="cta-btn-style-2">보기</div>
+            </a>
+
+            <a href="https://blog.naver.com/borareview" target="_blank" class="link-item">
+                <img src="https://postfiles.pstatic.net/MjAyNTEwMTBfNjcg/MDAxNzYwMDgzMDM3MDE1.c2q-NLGoQq-zoU8v0QxlCtg8xZ-t3oZm81SrYeWrhPQg.I37Cu3cd7J3Usa8kA58RJJIEPrMKgLXjmRS8EwIvRwQg.JPEG/1.jpg?type=w966" class="link-thumb">
+                <span class="link-text">품절대란 제니 🔥10만원대🔥 애착 청바지</span>
+                <div class="cta-btn-style-2">보기</div>
+            </a>
         </div>
     </div>
 
